# Vita-CTP-Shortcut

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
assets/fonts/mdi/: LICENCE.txt
i18n/: en_us.json  fr.json
include/: Engine.hh  Keyboard.hh  Menu.hh  Utils.h
scripts/travis/: build.sh  setup.sh
src/: Background.cpp  Background.hh  Buttons.cpp  Buttons.hh  Checkbox.cpp  Checkbox.hh  Engine.cpp  Engine.hh  Keyboard.cpp  Menu.cpp  Menu.hh  Utils.h  main.c  main.cpp
src/app/: Ui.hh  Utils.cpp  Utils.hh
src/app/kit_override/core/: CustomApp.cpp  CustomApp.hh
src/app/ui/: LayoutTheme.hh
src/app/utils/: CTPApi.hh  CTPApiThread.cpp  WebModal.hh
src/app/views/: Welcome.hh
src/app/views/settings/: Customization.hh  Settings.cpp  Settings.hh
src/kit/: Changelog.md  README.md  Ui.cpp  Ui.hh  Utils.cpp  Utils.hh
src/kit/core/: App.cpp  App.hh  Config.hh  UiEvent.cpp  UiEvent.hh  View.cpp  View.hh  ViewsController.cpp  ViewsController.hh
src/kit/ui/: UiButtons.cpp  UiButtons.hh  UiButtons.hpp  UiCards.cpp  UiCards.hh  UiCheckboxes.cpp  UiCheckboxes.hh  UiIcons.cpp  UiIcons.hh  UiIcons.hpp  UiIconsCodes.h  UiIconsCodes.hh  UiIconsCodesPSVita.hh  UiRadioBoxes.cpp  UiRadioBoxes.hh  UiTextFields.cpp  UiTextFields.hh  UiTexts.cpp  UiTexts.hh  UiTexts.hpp  UiTheme.cpp  UiTheme.hh  UiTheme.hpp
src/kit/ui/parent/: UiParentBoxes.cpp  UiParentBoxes.hh
src/kit/utils/: I18n.cpp  I18n.hpp  IME.cpp  IME.hpp  Pad.cpp  Pad.hpp  Touch.cpp  Touch.hpp  UtilsI18n.cpp  UtilsI18n.hh  UtilsI18n.hpp  UtilsIME.cpp  UtilsIME.hh  UtilsIME.hpp  UtilsPad.cpp  UtilsPad.hh  UtilsPad.hpp  UtilsPadTouchCtrl.cpp  UtilsPadTouchCtrl.hh  UtilsScroll.cpp  UtilsScroll.hh  UtilsTexts.cpp  UtilsTexts.hh  UtilsTouch.cpp  UtilsTouch.hh  UtilsTouch.hpp
src/kit_override/core/: CustomApp.cpp  CustomApp.hh
src/ui/: Background.cpp  Background.hh  LayoutTheme.cpp  LayoutTheme.hh
src/utils/: CTPApi.cpp  CTPApi.hh  CTPApiThread.hh  Config.cpp  Config.hh  Singleton.h  WebModal.cpp  WebModal.hh
src/views/: Welcome.cpp  Welcome.hh
src/views/settings/: Customization.cpp  Customization.hh  Settings.cpp  Settings.hh
